...

@Preview(showBackground = true)
@Composable
fun PersonCardPreview() {
    BirthdayListOblOpgTheme {
        PersonCard(
            person = Person(1, "testpass@mail.dk", "John Doe", 1999, 1, 1, "test", 25),
            onClick = {}
        )
    }
}


